--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">FiniteStateMashine</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">About program</string>
     <string name="btn_label_lock">LOCK</string>
     <string name="btn_label_unlock">UNLOCK</string>
     <string name="btn_label_lockX2">LOCKx2</string>
